Bug 330890 - Konqueror does not POST form data when following an HTTP 307 redirect status code
Summary: Konqueror does not POST form data when following an HTTP 307 redirect status ...
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: 4.11.3
Platform: Debian testing Other
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL: http://www.w3.org/People/Bos/Test/red...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-07 14:34 UTC by bert
Modified: 2014-03-02 00:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bert 2014-02-07 14:34:05 UTC
The test page[A] contains a form that uses HTTP POST to post data to a URL [B]. The result is a 307 Temporary Redirect to another URL [C]. HTTP clients are supposed to react to a 307 status code by issuing exactly the same request, i.e., the same POST in this case, to URL [C]. Konqueror does not POST to the new URL, but does a GET on it.

[A] http://www.w3.org/People/Bos/Test/redirect307.html
[B] http://www.w3.org/People/Bos/Test/redirect307-redirect.php
[C] http://www.w3.org/People/Bos/Test/redirect307-result.php


Reproducible: Always

Steps to Reproduce:
1. Open Konqueror on http://www.w3.org/People/Bos/Test/redirect307.html
2. Press "Submit"

Actual Results:  
The result page says "Failure!" because no form data was passed in the request.

Expected Results:  
The page should say "Success!"
Comment 1 Dawit Alemayehu 2014-02-27 13:23:57 UTC
Fix pending https://git.reviewboard.kde.org/r/116017/
Comment 2 Dawit Alemayehu 2014-03-02 00:17:16 UTC
Git commit 5fd9d1a7b2d0afda2bf76bcdbd4df5577b893387 by Dawit Alemayehu.
Committed on 23/02/2014 at 18:55.
Pushed by adawit into branch 'KDE/4.13'.

Implemented HTTP POST -> POST redirection support in KIO.
FIXED-IN: 4.13
REVIEW: 116017

M  +21   -37   kio/kio/job.cpp
M  +19   -13   kio/kio/job.h
M  +4    -2    kio/kio/job_p.h
M  +3    -5    kioslave/http/http.cpp

http://commits.kde.org/kdelibs/5fd9d1a7b2d0afda2bf76bcdbd4df5577b893387