Implemented HTTP POST -> POST redirection support in KIO.

BUG: 330890
FIXED-IN: 4.13
REVIEW: 116017